add oraclejdk11 test
fix https://github.com/unfiltered/unfiltered/issues/423